# scalpel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: gemma-2-2b.yaml  gpt2-small.yaml
notebooks/: demo.ipynb
src/scalpel/: __init__.py  cache.py  cli.py  config.py  corpus.py  discovery.py  experiment.py  judge.py  neuronpedia.py  plotting.py  sae.py  seed.py  steering.py
src/scalpel/backends/: __init__.py  base.py  mock.py  transformerlens.py
src/scalpel/data/: __init__.py  corpus_sample.txt
src/scalpel/metrics/: __init__.py  effect.py  fluency.py
tests/: conftest.py  test_cache.py  test_cli_smoke.py  test_config.py  test_corpus.py  test_discovery.py  test_experiment.py  test_judge.py  test_metrics_effect.py  test_metrics_fluency.py  test_neuronpedia.py  test_plotting.py  test_sae.py  test_seed.py  test_steering.py
