[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scalpel"
version = "0.1.0"
description = "Causally steer LLM behavior via SAE feature directions, with rigorous controlled measurement."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Dylan Patriarchi" }]
keywords = [
    "mechanistic-interpretability",
    "sparse-autoencoder",
    "activation-steering",
    "llm",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
# Heavy model/SAE stack. Not needed for the mock backend, unit tests, or CI.
models = ["transformer-lens>=2.0", "sae-lens>=4.0"]
# Local LLM-judge over the Ollama REST API.
judge = ["requests>=2.31"]
# Plotting and results tables.
viz = ["matplotlib>=3.8", "pandas>=2.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
    "types-pyyaml",
    "types-requests",
]

[project.scripts]
scalpel = "scalpel.cli:main"

[project.urls]
Homepage = "https://github.com/dylanpatriarchi/scalpel"
Repository = "https://github.com/dylanpatriarchi/scalpel"

[tool.hatch.build.targets.wheel]
packages = ["src/scalpel"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/scalpel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
